--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,10 @@ application/cache/*
 !application/cache/index.html
 !application/cache/.htaccess
 
+
+application/config/*
+
+
 application/logs/*
 !application/logs/index.html
 !application/logs/.htaccess
@@ -13,6 +17,7 @@ user_guide_src/cilexer/build/*
 user_guide_src/cilexer/dist/*
 user_guide_src/cilexer/pycilexer.egg-info/*
 /vendor/
+
 
 # IDE Files
 #-------------------------
@@ -26,3 +31,5 @@ user_guide_src/cilexer/pycilexer.egg-info/*
 *.sublime-workspace
 *.sublime-project
 *.zip
+
+*.php
